--- a/register.html
+++ b/register.html
@@ -9,30 +9,30 @@
 </head>
 <body>
   <div class="login-form">
-    <h2 class="login-title">Kayıt Ol</h2>
+    <h2 class="login-title">Register</h2>
 
     <form id="registerForm">
       <div class="input-box">
-        <input type="text" id="name" placeholder="Ad Soyad" required />
+        <input type="text" id="name" placeholder="Name/Surname" required />
       </div>
       <div class="input-box">
-        <input type="email" id="email" placeholder="E-posta" required />
+        <input type="email" id="email" placeholder="E-mail" required />
       </div>
       <div class="input-box">
-        <input type="password" id="password" placeholder="Şifre" required />
+        <input type="password" id="password" placeholder="Password" required />
       </div>
       <div class="input-box">
-        <input type="password" id="confirmPassword" placeholder="Şifreyi Onayla" required />
+        <input type="password" id="confirmPassword" placeholder="Confirm password" required />
       </div>
 
       <div class="remember-forget-box">
         <label>
           <input type="checkbox" required />
-          Şartları kabul ediyorum
+           I accept the terms
         </label>
       </div>
 
-      <button type="submit" class="login-btn">Kayıt Ol</button>
+      <button type="submit" class="login-btn">Sign up</button>
 
       
     </form>
@@ -45,12 +45,12 @@
       const confirmPassword = document.getElementById('confirmPassword').value;
 
       if (password !== confirmPassword) {
-        alert('Şifreler eşleşmiyor.');
+        alert("The passwords don't match.");
         return;
       }
 
       // Backend'e gönderme işlemi burada yapılabilir.
-      alert('Kayıt başarıyla tamamlandı!');
+      alert("Registration has been completed successfully!");
       window.location.href = 'login.html';
     });
   </script>
